# seex

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-04-24-seex-imported-parts-export-design.md  2026-04-24-seex-imported-symbols-design.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_paths.rs  config.rs  controller.rs  extract.rs  imported_symbols.rs  lib.rs  monitor.rs  nlbn.rs  npnp.rs  tui.rs
